<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/search_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:singleLine="true"
                android:hint="Título" />

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Campo título obrigatório"
                android:textSize="12sp"
                android:visibility="invisible"
                android:textColor="@color/red"/>

        </LinearLayout>

        <EditText
            android:id="@+id/year"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="4"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:hint="Ano" />

        <Button
            android:id="@+id/search"
            android:text="Buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp"
            android:text="Você ainda não\n realizou buscas :(" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </ViewFlipper>
</LinearLayout>